--- a/src/main/resources/assets/no-more-dimensions/lang/en_us.json
+++ b/src/main/resources/assets/no-more-dimensions/lang/en_us.json
@@ -1,5 +1,9 @@
 {
   "custom_text.no_more_dimensions.portal_building_blocked": "This portal is not available to you right now!",
   "custom_text.no_more_dimensions.dimension_blocked": "This dimension is not available to you right now!",
-  "commands.no_more_dimensions.reload.success": "Config reloaded!"
+  "commands.no_more_dimensions.reload.success": "Config reloaded!",
+
+  "text.autoconfig.no_more_dimensions.option.common": "Common",
+  "text.autoconfig.no_more_dimensions.option.common.listDelimiter": "List delimiter",
+  "text.autoconfig.no_more_dimensions.option.common.blockedDimensions": "Blocked Dimensions"
 }
